Update styles and add a little print styles

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,8 +15,64 @@ a {
 
 h2 {
     font-size: 3rem;
-    margin-bottom: 1rem;
+    margin: 2rem 0;
     text-transform: uppercase;
+}
+
+h3 {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+}
+
+h4 {
+    margin: 0;
+    font-size: 1rem;
+}
+
+p {
+    font-size: 1rem;
+    font-weight: normal;
+}
+
+.project {
+    margin: 1rem 0;
+}
+
+.title {
+    margin: 1rem 0;
+}
+
+.color__green {
+    color: #2e8a5a;
+    margin: 2rem 0;
+}
+
+i.fa {
+    width: 1rem;
+    height: 1rem;
+    margin: 0 0.7rem 0 0;
+}
+
+ul {
+    padding: 0;
+    margin-top: 1rem;
+}
+
+.position {
+    &.is-current {
+        margin: 1rem 0;
+    }
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+
+    h3 {
+        margin: 0 0 0 1.5rem;
+    }
 }
 
 .information {
@@ -39,12 +95,6 @@ h2 {
         li {
             display: flex;
             justify-content: flex-start;
-
-            i {
-                width: 1rem;
-                height: 1rem;
-                margin: 0 0.7rem 0 0;
-            }
         }
     }
 }
@@ -56,5 +106,22 @@ h2 {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+    }
+}
+
+.container {
+    width: 90%;
+    margin: 1.7rem auto;
+    max-width: 1200px;
+}
+
+.content {
+    font-size: 1rem;
+    font-weight: 100;
+}
+
+@media print {
+    .skills ul {
+        display: block;
     }
 }
